--- a/contact-filter/src/App.css
+++ b/contact-filter/src/App.css
@@ -23,7 +23,7 @@
     border-bottom: 1px dotted grey;
 }
 
-.contact-image {
+.contact-id {
     border-radius: 50%;
     margin: 5px;
 }
@@ -33,7 +33,7 @@
     font-weight: bold;
 }
 
-.contact-number {
+.contact-username {
     font-size: 18px;
     color: grey;
 }
