--- a/gitReact/show-info/src/stylesheets/info.css
+++ b/gitReact/show-info/src/stylesheets/info.css
@@ -4,6 +4,7 @@ div.info {
     margin-top: 15px;
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    grid-gap: 15px;
 }
 
 div>section>img {
@@ -26,11 +27,27 @@ div>section:nth-of-type(2) {
 }
 
 div>section:nth-of-type(3) {
-    grid-row: 4/5;
+    grid-row: 3/4;
     grid-column: 6/7;
     text-align: center;
 }
 
-hr {
-    width: 65%;
+div>section:nth-of-type(4) {
+    grid-row: 4/5;
+    grid-column: 6/7;
+    text-align: center;
+    align-items: center;
+    width: 120px;
+    height: 30px;
+    background: #2196F3;
+    color: white;
+    padding-top: 12px;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+
+div>section:nth-of-type(4):hover {
+    background: #0b7dda;
 }
