--- a/gitReact/show-info/src/stylesheets/repos.css
+++ b/gitReact/show-info/src/stylesheets/repos.css
@@ -8,7 +8,7 @@
 .repo2 {
     grid-column: 3 / 5;
     grid-row: 9/9;
-    width: 450px;
+    width: auto;
     align-self: center;
     justify-self: center;
     cursor: pointer;
@@ -18,6 +18,7 @@
 .repoList {
     display: block;
     text-align: center;
+    padding: 0 15px 0 15px;
     background-color: #F1F1F1;
     text-decoration: none;
     font-size: 1.5rem;
