--- a/to-do-list/src/App.css
+++ b/to-do-list/src/App.css
@@ -1,31 +1,8 @@
-body{
-  display: grid;
-}
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+/* body {
+    display: grid;
+    grid-template-columns: (3, 1fr);
+    grid-template-rows: (5, 1fr);
+    outline: 3px solid rebeccapurple;
+    background-color: mediumpurple;
+    grid-template-areas: 'l c r';
+} */
