--- a/to-do-list/src/styles/result.css
+++ b/to-do-list/src/styles/result.css
@@ -1,3 +1,13 @@
 .result{
+    width: 50%;
     outline: 3px solid darkorange;
+    text-align: left;
+}
+
+.done{
+    color: deeppink;
+}
+
+.items{
+    color: purple;
 }
