--- a/metaweather-api/src/styles/App.css
+++ b/metaweather-api/src/styles/App.css
@@ -1,10 +1,11 @@
-/* @import url('https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400'); */
+
 body {
     font-family: "Open Sans", serif;
 }
 
+h2 {
+    color: #fffff4;
+}
 .wrapper {
     background: linear-gradient(to right, #e67e22, #e74c3c);
     height: 100vh;
@@ -94,27 +95,4 @@ button {
 
 button:active {
     outline: none;
-}
-
-.weather__info {
-    width: 60%;
-    font-size: 20px;
-    font-weight: 200;
-    letter-spacing: 2px;
-}
-
-.weather__key {
-    color: #f16051;
-    border-bottom: solid 2px rgba(255, 255, 255, 0.06);
-    padding: 20px 0 20px 0;
-    font-weight: 400;
-}
-
-.weather__key:last-child {
-    border: 0;
-}
-
-.weather__value {
-    color: #fff;
-    font-weight: 200;
 }
